# Music_Recognizer

./: CMakeLists.txt  Doxyfile  README.md
html/: AudioFile_8h.html  AudioFile_8h.js  AudioFile_8h__dep__incl.map  AudioFile_8h__dep__incl.md5  AudioFile_8h__incl.map  AudioFile_8h__incl.md5  AudioFile_8h_source.html  AudioRepresentation_8cpp.html  AudioRepresentation_8cpp__incl.map  AudioRepresentation_8cpp__incl.md5  AudioRepresentation_8h.html  AudioRepresentation_8h.js  AudioRepresentation_8h__dep__incl.map  AudioRepresentation_8h__dep__incl.md5  AudioRepresentation_8h__incl.map  AudioRepresentation_8h__incl.md5  AudioRepresentation_8h_source.html  Audio_8cpp.html  Audio_8cpp__incl.map  Audio_8cpp__incl.md5  Audio_8h.html  Audio_8h.js  Audio_8h__dep__incl.map  Audio_8h__dep__incl.md5  Audio_8h__incl.map  Audio_8h__incl.md5  Audio_8h_source.html  BoyerMooreAutomaton_8cpp.html  BoyerMooreAutomaton_8cpp.js  BoyerMooreAutomaton_8cpp__incl.map  BoyerMooreAutomaton_8cpp__incl.md5  BoyerMooreAutomaton_8h.html  BoyerMooreAutomaton_8h.js  BoyerMooreAutomaton_8h__dep__incl.map  BoyerMooreAutomaton_8h__dep__incl.md5  BoyerMooreAutomaton_8h__incl.map  BoyerMooreAutomaton_8h__incl.md5  BoyerMooreAutomaton_8h_source.html  CommandHandler_8h.html  CommandHandler_8h__dep__incl.map  (+431 more)
html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  defines_0.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  (+49 more)
src/: Audio.cpp  Audio.h  AudioRepresentation.cpp  AudioRepresentation.h  Util.cpp  Util.h  main.cpp
src/BoyerMooreAutomaton/: BoyerMooreAutomaton.cpp  BoyerMooreAutomaton.h  State.cpp  State.h
src/GUI/: AddSongToLibrary.cpp  AddSongToLibrary.h  GuiManager.cpp  GuiManager.h  Test.pro  about.cpp  about.h  about.ui  (+17 more)
(+13 files in other folders)
